force-app/main/default/objects/WRDB_Layout__mdt/WRDB_Layout__mdt.object-meta.xml
<CustomObject>
    <label>WRDB Layout</label>
    <pluralLabel>WRDB Layouts</pluralLabel>
</CustomObject>