force-app/main/default/objects/WRDB_Layout__mdt/fields/Image_Path__c.field-meta.xml
<CustomField>
    <fullName>Image_Path__c</fullName>
    <label>Image Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>