force-app/main/default/objects/WRDB_Layout__mdt/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <label>Number of Items</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>