force-app/main/default/objects/WRDB_Layout__mdt/fields/Variation__c.field-meta.xml
<CustomField>
    <fullName>Variation__c</fullName>
    <label>Variation</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>